Document IDEA setup